tests/valid/definite/ListLength_Valid_2.whiley
void System::main([string] args):
     arr = [1,2,3]
     assert arr[0] < |arr|
     assert arr[1] < |arr|
     assert arr[2] == |arr|
     print str(arr[0])
