tests/invalid/definite/ListLength_Invalid_2.whiley
void System::main([string] args):
     [int] arr
     arr = [1,2,3]
     assert arr[0] < |arr|
     assert arr[1] < |arr|
     assert arr[2] != |arr|
     print str(arr[0])
